# AMR-TOPSUS

./: Preliminary Design Review.docx  QFD_AMR_PTxyz.xlsx  README.MD  amr_architecture.puml  amr_swimlane.puml  cleanup_bab1.py  read_docx.py  rewrite_all.py  update_bab1.py  update_bab2.py  update_bab34.py  ~$eliminary Design Review.docx
src/: AGENTS.md  README.md
src/agv_obstacle_sensor/: package.xml  setup.py
src/agv_obstacle_sensor/agv_obstacle_sensor/: __init__.py  cek.py  obstacle_node.py
src/agv_obstacle_sensor/launch/: obstacle.launch.py
src/agv_obstacle_sensor/resource/: agv_obstacle_sensor
src/amr_bringup_headless/: package.xml  setup.py
src/amr_bringup_headless/config/: amcl.yaml  nav2_params.yaml
src/amr_bringup_headless/launch/: amir_starter.launch.py  navigation.launch.py
src/amr_bringup_headless/maps/: cl_6mei_keepout.pgm  cl_6mei_nav.json  solder2kpp_purrfect_keepout.pgm  solder2kpp_purrfect_nav.json
src/arya_web_interface/: .gitignore  DEPLOY.md  index.html  package-lock.json  package.json  setup.py  tailwind.config.js  validate_robotics.py  vite.config.ts
src/arya_web_interface/arya_web_interface/: MIGRATE.md  web_node.py
src/arya_web_interface/arya_web_interface/handlers/: __init__.py
src/arya_web_interface/arya_web_interface/services/: ros_node.py
src/arya_web_interface/arya_web_interface/static/: index.html
src/arya_web_interface/arya_web_interface/static/css/: styles.css
src/arya_web_interface/arya_web_interface/static/js/: app.js.bak
src/arya_web_interface/arya_web_interface/utils/: constants.py  map_management.py  maps.py
src/arya_web_interface/src/: App.tsx  index.css  main.tsx
src/arya_web_interface/src/components/layout/: Header.tsx  Sidebar.tsx  StatusBar.tsx  index.ts
src/arya_web_interface/src/components/ui/: DPad.tsx  Modal.tsx  Panel.tsx  Toast.tsx  index.ts
src/arya_web_interface/src/features/: index.ts
src/arya_web_interface/src/features/drive/: DriveView.tsx  index.ts
src/arya_web_interface/src/features/io/: IOView.tsx  index.ts
src/arya_web_interface/src/features/mission/: MissionView.tsx  index.ts
src/arya_web_interface/src/features/navigation/: NavigationView.tsx  index.ts
src/arya_web_interface/src/features/settings/: SettingsView.tsx
src/arya_web_interface/src/features/teleop/: TeleopView.tsx  index.ts
src/arya_web_interface/src/features/topics/: TopicsView.tsx  index.ts
src/arya_web_interface/src/hooks/: index.ts  useROS.ts
src/arya_web_interface/src/services/ros/: connection.ts  index.ts  publisher.ts  subscriber.ts
src/arya_web_interface/src/stores/: alarmStore.ts  batteryStore.ts  connectionStore.ts  index.ts  ioStore.ts  launchStore.ts  mapStore.ts  missionStore.ts  robotStore.ts
src/arya_web_interface/src/types/: ros.ts
src/ccf_laser_sensor/: README.md  package.xml  setup.cfg  setup.py
src/ccf_laser_sensor/ccf_laser_sensor/: ccf_laser_node.py  modbus_rtu.py
src/ccf_laser_sensor/config/: ccf_laser_params.yaml
src/ccf_laser_sensor/launch/: ccf_laser.launch.py
src/magnetic_line_follower/: package.xml  setup.cfg  setup.py
src/magnetic_line_follower/launch/: line_follower_launch.py  magnetic_line_follower.launch.py  magnetic_line_follower_integrated.launch.py  record_path.launch.py
src/magnetic_line_follower/magnetic_line_follower/: __init__.py  line_follower_node.py  line_follower_node.py.bak  line_priority_controller.py  mag_line_keeper.py  path_recorder.py.bak
src/ros2_wheeltec_n100_imu/: CMakeLists.txt  package.xml
src/ros2_wheeltec_n100_imu/scripts/: imu_degrees.py
src/ros2_wheeltec_n100_imu/src/: imu_degree_publisher.cpp  imu_node.cpp
src/sllidar_ros2/launch/: sllidar_a2m12_launch.py  sllidar_a2m7_launch.py
src/sllidar_ros2/scripts/: create_udev_rules.sh  rplidar.rules
src/sllidar_ros2/src/: sllidar_node.cpp
