<?xml version="1.0"?>
<package format="2">
  <name>agv_obstacle_sensor</name>
  <version>0.1.0</version>
  <description>Auto-detect and read dual 7-channel obstacle sensors (front/back).</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>pyserial</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
