<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_bringup_headless</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="arya@todo.todo">arya</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>slam_toolbox</depend>
  <depend>rplidar_ros</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_collision_monitor</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>arya_motor_driver</depend>
  <depend>robot_localization</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_smac_planner</depend>
  <depend>nav2_velocity_smoother</depend>
  <exec_depend>arya_web_interface</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
