<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ccf_laser_sensor</name>
  <version>0.1.0</version>
  <description>
    ROS2 driver for CCF-LAS4-4M 5-channel laser obstacle avoidance sensor
    (Beijing Xintuo Future Technology). Communicates via RS485 Modbus RTU and
    publishes sensor_msgs/LaserScan + std_msgs/Float32MultiArray.
  </description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-pyserial</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
